--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
     padding-top: 250px;
     padding-bottom: 250px;
     background-color: grey;
-    background-image: url("images/torshov.jpg");
+    background-image: url("torshov.jpg");
     background-size: cover;   
 
 }
